tests/error/inout_errors/nested_call_right_to_left.err
Error: Copy violation (at $FILE:13:22)
   | 
11 | def test(q: qubit @owned) -> tuple[int, qubit]:
12 |     # This doesn't work since arguments are evaluated from left to right
13 |     return foo(q, foo(q, foo(q, 0))), q
   |                       ^ Variable `q` with non-copyable type `qubit` cannot be
   |                         borrowed ...
   | 
13 |     return foo(q, foo(q, foo(q, 0))), q
   |                - since it was already borrowed here

Guppy compilation failed due to 1 previous error
